# NeuralNet

./: .gitignore  Activation.cpp  Activation.h  BatchNorm.cpp  BatchNorm.h  BlockLayer.cpp  BlockLayer.h  CMakeLists.txt  ConvLayer.cpp  ConvLayer.h  DenseBlock.cpp  DenseBlock.h  DenseConstruct.h  DenseLayerComposite.cpp  DenseLayerComposite.h  Layers.h  LinearLayer.cpp  LinearLayer.h  Pooling.cpp  Pooling.h  README.md  main.cpp
.github/workflows/: main.yml
src/: Activation.cpp  Activation.h  BatchNorm.cpp  BatchNorm.h  CMakeLists.txt  ConvLayer.cpp  ConvLayer.h  DenseLayerComposite.cpp  Layers.cpp  Layers.h  LinearLayer.cpp  Pooling.cpp  Pooling.h  main.cpp
tests/: CMakeLists.txt  test_activationLayer.cpp  test_batchNormLayer.cpp  test_convLayer.cpp  test_expected_values.h  test_main.cpp
